Rendered testimonies page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -58,157 +58,53 @@
             Testimonies
         </h1>
 
+        {{#if testimonies}}
         <div class="flex items-center justify-center md:justify-start">
-            <div class="grid py-10 gap-4 content-center">
+            <div class="grid pb-10 gap-4 content-center">
                 {{!-- Columns --}}
                 <div class="grid-col grid-col--1"></div>
                 <div class="grid-col grid-col--2"></div>
                 <div class="grid-col grid-col--3"></div>
                 {{!-- <div class="grid-col grid-col--4"></div> --}}
 
+            {{#each testimonies}}
                 {{!-- Content --}}
                 <div class="grid-item">
                     <div class="block bg white border borer-gray-200 shadow p-5 max-w-md">
                         <div class="flex flex-col space-y-5">
-                            <div class="flex flex-col">
-                                <p class="text-xl"><strong>Jason Kwame Appiatu</strong></p>
-                                <small class="text-gray-500">19th November, 2022</small>
+
+                            <div class="flex flex-col relative">
+                                
+                                <p class="text-xl"><strong>{{ user.name }}</strong></p>
+                                <small class="text-gray-500">{{ formatDate createdAt 'Do MMMM YYYY' }}</small>
                             </div>
                             <p class="text-gray-700">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, ipsum voluptatem. Ad vel recusandae praesentium. Eum obcaecati magni quaerat perferendis natus sequi similique dolores dolore, molestiae nesciunt voluptatibus quis velit quod distinctio assumenda quasi accusamus adipisci et repellat ipsum voluptatum at labore praesentium fugiat. Exercitationem, ea ut! Dolorum dolor neque, ducimus incidunt voluptatum et eos? Modi perferendis dignissimos reprehenderit officia quas aliquid vero porro recusandae pariatur incidunt consequatur laboriosam, molestias non optio necessitatibus, quis est, ex quia similique repellat at! Iure laborum corporis, sint, neque temporibus at reprehenderit incidunt aspernatur nam repudiandae consectetur ea qui saepe veritatis quaerat unde architecto, quas animi id labore. Earum libero tempore quibusdam enim, quasi laudantium et id tempora dicta nostrum? Similique aperiam et quo voluptate dolore totam, ab illum libero aliquid aliquam. Assumenda voluptates mollitia dolorem distinctio tenetur facilis eum architecto corporis quo, cupiditate pariatur rem odio deserunt perspiciatis esse sint excepturi accusantium tempore officiis. Recusandae ex, commodi odio libero tempora deleniti quae earum corrupti est officiis omnis consequatur facere consectetur mollitia porro ad quidem! Eaque aspernatur beatae enim iure molestiae quam quos nihil ipsum temporibus, commodi assumenda impedit cumque eveniet atque voluptatem doloribus? Ducimus impedit harum nostrum vero esse dolore doloribus consequatur ex?
+                                {{ testimony }}
                             </p>
                             <div class="flex flex-row space-x-3">
                                 <small>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                    {{#each tags}}
+                                        <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">{{this}}</button>
+                                    {{/each}}
                                 </small>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="grid-item">
-                    <div class="block bg white border borer-gray-200 shadow p-5 max-w-md">
-                        <div class="flex flex-col space-y-5">
-                            <div class="flex flex-col">
-                                <p class="text-xl"><strong>Jason Kwame Appiatu</strong></p>
-                                <small class="text-gray-500">19th November, 2022</small>
-                            </div>
-                            <p class="text-gray-700">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, ipsum voluptatem. Ad vel recusandae praesentium. Eum obcaecati magni quaerat perferendis natus sequi similique dolores dolore, molestiae nesciunt voluptatibus quis velit quod distinctio assumenda quasi accusamus adipisci et repellat ipsum voluptatum at labore praesentium fugiat. Exercitationem, ea ut! Dolorum dolor neque, ducimus incidunt voluptatum et eos? Modi perferendis dignissimos reprehenderit officia quas aliquid vero porro recusandae pariatur incidunt consequatur laboriosam, molestias non optio necessitatibus, quis est, ex quia similique repellat at! Iure laborum corporis, sint, neque temporibus at r
-                            </p>
-                            <div class="flex flex-row space-x-3">
-                                <small>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
-                                </small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="grid-item">
-                    <div class="block bg white border borer-gray-200 shadow p-5 max-w-md">
-                        <div class="flex flex-col space-y-5">
-                            <div class="flex flex-col">
-                                <p class="text-xl"><strong>Jason Kwame Appiatu</strong></p>
-                                <small class="text-gray-500">19th November, 2022</small>
-                            </div>
-                            <p class="text-gray-700">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, ipsum voluptatem. Ad vel recusandae praesentium. E
-                            </p>
-                            <div class="flex flex-row space-x-3">
-                                <small>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
-                                </small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="grid-item">
-                    <div class="block bg white border borer-gray-200 shadow p-5 max-w-md">
-                        <div class="flex flex-col space-y-5">
-                            <div class="flex flex-col">
-                                <p class="text-xl"><strong>Jason Kwame Appiatu</strong></p>
-                                <small class="text-gray-500">19th November, 2022</small>
-                            </div>
-                            <p class="text-gray-700">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, ipsum voluptatem. Ad vel recusandae praesentium. Eum obcaecati magni quaerat perferendis natus sequi similique dolores dolore, molestiae nesciunt voluptatibus quis velit quod distinctio assumenda quasi accusamus adipisci et repellat ipsum voluptatum at labore praesentium fugiat. Exer commodi odio libero tempora deleniti quae earum corrupti est officiis omnis consequatur facere consectetur mollitia porro ad quidem! Eaque aspernatur beatae enim iure molestiae quam quos nihil ipsum temporibus, commodi assumenda impedit cumque eveniet atque voluptatem doloribus? Ducimus impedit harum nostrum vero esse dolore doloribus consequatur ex?
-                            </p>
-                            <div class="flex flex-row space-x-3">
-                                <small>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
-                                </small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="grid-item">
-                    <div class="block bg white border borer-gray-200 shadow p-5 max-w-md">
-                        <div class="flex flex-col space-y-5">
-                            <div class="flex flex-col">
-                                <p class="text-xl"><strong>Jason Kwame Appiatu</strong></p>
-                                <small class="text-gray-500">19th November, 2022</small>
-                            </div>
-                            <p class="text-gray-700">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, ipsum voluptatem. Ad vel recusandae praesentium. Eum obcaecati magni quaerat perferendis natus sequi similique dolores dolore, molestiae nesciunt voluptatibus quis velit qudolore totam, ab illum libero aliquid aliquam. Assumenda voluptates mollitia dolorem distinctio tenetur facilis eum architecto corporis quo, cupiditate pariatur rem odio deserunt perspiciatis esse sint excepturi accusantium tempore officiis. Recusandae ex, commodi odio libero tempora deleniti quae earum corrupti est officiis omnis consequatur facere consectetur mollitia porro ad quidem! Eaque aspernatur beatae enim iure molestiae quam quos nihil ipsum temporibus, commodi assumenda impedit cumque eveniet atque voluptatem doloribus? Ducimus impedit harum nostrum vero esse dolore doloribus consequatur ex?
-                            </p>
-                            <div class="flex flex-row space-x-3">
-                                <small>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
-                                </small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="grid-item">
-                    <div class="block bg white border borer-gray-200 shadow p-5 max-w-md">
-                        <div class="flex flex-col space-y-5">
-                            <div class="flex flex-col">
-                                <p class="text-xl"><strong>Jason Kwame Appiatu</strong></p>
-                                <small class="text-gray-500">19th November, 2022</small>
-                            </div>
-                            <p class="text-gray-700">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, ipsum voluptatem. Ad vel recusandae praesentium. Eidem! Eaque aspernatur beatae enim iure molestiae quam quos nihil ipsum temporibus, commodi assumenda impedit cumque eveniet atque voluptatem doloribus? Ducimus impedit harum nostrum vero esse dolore doloribus consequatur ex?
-                            </p>
-                            <div class="flex flex-row space-x-3">
-                                <small>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
-                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
-                                </small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
+
+            {{/each}}
+            {{!-- Block to display grid well --}}
+            <div class="grid-item invisible">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, odio.
+            </div>
+            <div class="grid-item invisible">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vel.
+            </div>
+        {{else}}
             </div>
         </div>
+            <p class="container mx-auto p-4 md:px-auto">No testimonies have been added yet.</p>
+        {{/if}}
     </div>
 </section>
