--- a/views/auth/testimonies.hbs
+++ b/views/auth/testimonies.hbs
@@ -1,5 +1,5 @@
 {{!-- Search bar --}}
-<section class="py-10">
+{{!-- <section class="py-10">
     <div class="container mx-auto px-4 md:px-auto flex justify-center items-center">
         <form class="flex items-center w-full md:w-3/5">   
             <label for="simple-search" class="sr-only">Search</label>
@@ -17,7 +17,7 @@
             </button>
         </form>
     </div>
-</section>
+</section> --}}
 
 
 {{!-- Looping through testimonies --}}
