--- a/views/index.hbs
+++ b/views/index.hbs
@@ -30,7 +30,7 @@
 </section>
 
 {{!-- Search bar --}}
-<section class="py-10">
+{{!-- <section class="py-10">
     <div class="container mx-auto px-4 md:px-auto flex justify-center items-center">
         <form action="/search" method="POST" class="flex items-center w-full md:w-3/5">   
             <label for="simple-search" class="sr-only">Search</label>
@@ -48,7 +48,7 @@
             </button>
         </form>
     </div>
-</section>
+</section> --}}
 
 {{!-- Looping through testimonies --}}
 <section class="py-10">
