--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,7 +24,7 @@
         </h1>
 
         <p class="py-5 text-center md:text-left">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis maiores ea, harum rem vero sunt nisi mollitia voluptatibus at provident expedita possimus voluptatem. Accusantium harum aliquid cupiditate nihil culpa aliquam! Delectus tempore, dignissimos voluptatem enim ullam, nisi in temporibus excepturi, voluptatum fugiat magnam! Inventore obcaecati quasi accusamus neque adipisci expedita molestias magni, temporibus reiciendis. Dolorem saepe vero illum repellat blanditiis veritatis dolorum reprehenderit at debitis ratione labore nam amet modi a eum aperiam earum ipsa magni tenetur nisi sapiente, laudantium molestiae ex. Sit ipsum recusandae voluptate necessitatibus. Consectetur, quae dicta. Fuga delectus alias ex sunt architecto voluptas minus expedita tenetur.
+            SHARE is a platform that allows users to share their testimony of what God has done in their lives. From Revelation 12:11, we can see that testimonies are very powerful tools that can be used to overcome the evil one. Feel free to join this amazing platform of believers to <q>SHARE</q> your experience to encourage and strengthen someones faith. Testimonies can also serve as a means for evangelism. So what are you waiting for? <em>SHARE now ;)!</em>
         </p>
     </div>
 </section>
