--- a/public/css/output.css
+++ b/public/css/output.css
@@ -1143,6 +1143,11 @@ select {
   padding-right: 1.25rem;
 }
 
+.py-9 {
+  padding-top: 2.25rem;
+  padding-bottom: 2.25rem;
+}
+
 .pl-3 {
   padding-left: 0.75rem;
 }
@@ -1283,6 +1288,11 @@ select {
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .underline {
