--- a/views/partials/_footer.hbs
+++ b/views/partials/_footer.hbs
@@ -2,5 +2,13 @@
     <div class="container mx-auto px-4 md:px-auto flex flex-col items-center justify-center py-10">
         <p class="text-white">Copyright &copy; Share.com 2022</p>
         <p class="text-gray-400"><small>Property of Appiatu Group of Companies Int.</small></p>
+        <div class="flex flex-row space-x-3 mt-2 text-gray-200">
+            <a href="https://github.com/Jason-bolt">
+                <ion-icon name="logo-github"></ion-icon>
+            </a>
+            <a href="https://www.linkedin.com/in/jason-appiatu/">
+                <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+        </div>
     </div>
 </footer>
