Added validation on add form

--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -1,3 +1,15 @@
+{{#if message.error}}
+    <div class="flex space-x-2 px-4 py-2 mb-4 text-sm text-red-700 bg-red-100 rounded-lg items-center justify-center" role="alert">
+        <div class="text-lg pt-1">
+                <ion-icon name="information-circle-outline"></ion-icon>
+        </div>
+        <span class="sr-only">Info</span>
+        <div>
+            <span class="font-medium">{{ message.error }}</span> 
+        </div>
+    </div>
+{{/if}}
+
 {{#if message.success}}
     <div class="flex space-x-2 px-4 py-2 mb-4 text-sm text-green-700 bg-green-100 rounded-lg items-center justify-center" role="alert">
         <div class="text-lg pt-1">
