--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -145,9 +145,13 @@
                         </label>                        
                         
                         <select name="tags" class="tags rounded border border-gray-300 focus:border-violet-800" multiple>
-                            <option value="Faithful">Faithful</option>
-                            <option value="Gracious">Gracious</option>
-                            <option value="Provider">Provider</option>
+                            <option value="Faithful">Healing</option>
+                            <option value="Gracious">Mercy</option>
+                            <option value="Provider">Providence</option>
+                            <option value="Provider">Salvation</option>
+                            <option value="Provider">Love</option>
+                            <option value="Provider">Forgiveness</option>
+                            <option value="Provider">Trust</option>
                         </select>
                         
                     </div>
